# tum-lsr-dhri

./: CalibrationOneCam.md  HowToSetup.md  MultipleObjectTracking.md  MultipleObjectTrackingResult.md  PointcloudFilter.md  ProjectHome.md  setup.bash
applications/dhri_launch/: mainpage.dox  manifest.xml
pointcloud/ckinect_cutting/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml
pointcloud/ckinect_cutting-build/: CMakeCache.txt  Makefile  ckinect_cutting.cbp  cmake_install.cmake
pointcloud/ckinect_cutting/qtbuild/: CMakeCache.txt  Makefile  ckinect_cutting.cbp  cmake_install.cmake
pointcloud/ckinect_cutting/src/: ckinect_cutting.cpp
pointcloud/ckinect_filtering/: ckinect_filtering.yaml  mainpage.dox  manifest.xml  manifest.xml~
pointcloud/ckinect_filtering/qtbuild/: CMakeCache.txt  Makefile  ckinect_filtering.cbp  cmake_install.cmake
pointcloud/ckinect_filtering/src/: ckinect_filtering.cpp
pointcloud/ckinect_pcmerge2/: CMakeLists.txt  ckinect_pcmerge2.yaml  mainpage.dox  manifest.xml
pointcloud/ckinect_pcmerge2-build/: CMakeCache.txt  Makefile  ckinect_pcmerge2.cbp  cmake_install.cmake  ui_mainwindow.h
pointcloud/ckinect_pcmerge2-build/src/: moc_mainwindow.cxx
pointcloud/ckinect_pcmerge2/src/: ckinect_pcmerge2.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
pointcloud/dhri_calibrationOneCam/: CMakeLists.txt  CMakeLists.txt~  calibrationOneCam.launch~  calibrationOneCam.vcg  calibrationOneKinect.launch~  mainpage.dox  manifest.xml  param_camera.yaml  param_checkboard.yaml  parameter.yaml~
pointcloud/dhri_calibrationOneCam-build/: CMakeCache.txt  Makefile  cmake_install.cmake  dhri_calibrationOneCam.cbp  ui_dialogcalibration.h  ui_mainwindow.h
pointcloud/dhri_calibrationOneCam-build/src/: moc_dialogcalibration.cxx  moc_mainwindow.cxx
pointcloud/dhri_calibrationOneCam/src/: calibrationOneCam.cpp  dialogcalibration.cpp  dialogcalibration.h  dialogcalibration.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
pointcloud/dhri_calibrationOneKinect/: CMakeLists.txt  calibrationOneKinect.launch  calibrationOneKinect.launch~  ckinect_calibration_stereo.yaml  mainpage.dox  manifest.xml  manifest.xml~  parameter.yaml
pointcloud/dhri_calibrationOneKinect-build/: CMakeCache.txt  Makefile  cmake_install.cmake  dhri_calibrationOneKinect.cbp  ui_dialogcalibration.h  ui_mainwindow.h
pointcloud/dhri_calibrationOneKinect-build/src/: moc_dialogcalibration.cxx  moc_mainwindow.cxx
pointcloud/dhri_calibrationOneKinect/src/: calibrationOneKinect.cpp  dialogcalibration.cpp  dialogcalibration.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
pointcloud/dhri_calibrationTwoCam/: mainpage.dox  manifest.xml
pointcloud/dhri_calibrationTwoKinects/: mainpage.dox  manifest.xml
pointcloud/dhri_filteringPointcloud/: mainpage.dox  manifest.xml
pointcloud/dhri_launch_pointcloud/: calibration_stereo.launch  camera_parameter.yaml  cutting_one_kinect.launch  cutting_one_kinect.launch~  kinect_frames_onecam.launch  kinect_frames_onecam.launch~  kinect_frames_twocams.launch  manifest.xml  openni_one_kinect.launch  openni_one_kinect.launch~  openni_two_kinects.launch  openni_two_kinects.launch~
pointcloud/dhri_multipleObjectTracking/: CMakeLists.txt  manifest.xml  manifest.xml~  multipleObjectTracking.launch  multipleObjectTracking.vcg  param.yaml
pointcloud/dhri_multipleObjectTracking/src/: pctracking.cpp  pctracking.h  pctracking_weight.cpp  tracking_gmm.cpp
pointcloud/dhri_pointcloudFilter/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  manifest.xml~  param.yaml  pointcloudFilter.launch  pointcloudFilter.vcg
pointcloud/dhri_pointcloudFilter-build/: CMakeCache.txt  Makefile  cmake_install.cmake  dhri_pointcloudFilter.cbp
pointcloud/dhri_pointcloudFilter/src/: pointcloudFilter.cpp  pointcloudFilter.cpp.autosave
pointcloud/include/: ckinect.h  ckinect.hpp  ckinectcalibration.cpp  ckinectcalibration.h  ckinectcalibrationstereo.cpp  ckinectcalibrationstereo.h  ckinectfiltering.cpp  ckinectfiltering.cpp.autosave  ckinectfiltering.h  ckinectfiltering.h.autosave  ckinectfilteringstereo.cpp  ckinectfilteringstereo.h  ckinectpcmerge.cpp  ckinectpcmerge.h  ckinectpcreceiver.h  ckinectpcreceiver.hpp  ckinecttflistener.cpp  ckinecttflistener.h  ckinecttfpublisher.cpp  ckinecttfpublisher.h  ckinectthread.cpp  ckinectthread.h  ckinecttransform.cpp  ckinecttransform.h
pointcloud/include/BodyTracker/: usertracker.h
pointcloud/include/gmmreg/: CMakeLists.txt  config_example.ini  extract_correspondence.cpp  gmmreg_api.cpp  gmmreg_api.h  gmmreg_aux.cpp  gmmreg_base.cpp  gmmreg_base.h  gmmreg_cpd.cpp  gmmreg_cpd.h  gmmreg_demo.cpp  gmmreg_grbf.cpp  gmmreg_grbf.h  gmmreg_mex.cpp  gmmreg_rigid.cpp  gmmreg_rigid.h  gmmreg_rigid_func.cpp  gmmreg_rigid_func.h  gmmreg_tps.cpp  gmmreg_tps.h  gmmreg_tps_func.cpp  gmmreg_tps_func.h  gmmreg_utils.cpp  gmmreg_utils.h  pygmmreg.cpp  readme.txt  setup.py  test_gauss_transform.cpp
pointcloud/include/pcfilter/: pcfilter.h  pcfilter.hpp
pointcloud/include/pctracking/: gaussian.cpp  gaussian.h  gaussiantrackcontainer.h  imft.hpp  pcgmmreg.cpp  pcgmmreg_func.cpp  pcobject.cpp  pcobject.h  pcobjectcontainer.cpp  pcobjectcontainer.h  pctrackcontainer.cpp  trackcontainer.h
pointcloud/rviz/: kinect_one_cut.vcg
pointcloud/test/: manifest.xml
pointcloud/tracking_gmm_jvci/: CMakeLists.txt  manifest.xml
pointcloud/tracking_gmm_jvci_exp1_3d/: mainpage.dox
pointcloud/tracking_gmm_jvci_exp5_3d/: manifest.xml
pointcloud/tracking_gmm_jvci_rgb/: manifest.xml
pointcloud/tracking_gmm_jvci_rgb_boost/: CMakeLists.txt  manifest.xml
pointcloud/tracking_gmm_jvci_rgb_kl/: CMakeLists.txt  manifest.xml
pointcloud/tracking_gmm_jvci_rgb_kl/src/: pctracking.cpp  pctracking_weight.cpp
pointcloud/tracking_gmm_jvci_rgb_kl/src/pctracking/: gaussiantrack.cpp  imft.hpp  pcgmmreg.h  pctrackcontainer.cpp
pointcloud/tracking_gmm_jvci_rgb_kl/src/pctracking/imft/: imft.h
pointcloud/tracking_gmm_v0.1/: CMakeLists.txt  mainpage.dox
pointcloud/tracking_gmm_v0.1/src/: tracking_gmm.cpp  trackinggmm.cpp  trackinggmm.h
(+116 files in other folders)
